quellcode/rater.service.ext.yaml
apiVersion: v1
kind: Service
metadata:
  name: rater-svc-ext
  namespace: dev
  labels:
    app: rater
    service: rater-svc-ext
spec:
  type: ClusterIP
  selector:
    app: rater
  ports:
  - name: http
    port: 8090
    targetPort: 8090
