quellcode/business-config.networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: business-config-np
  namespace: dev
spec:
  podSelector:
    matchLabels:
      app: business-config
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: rater
    - from:
        - podSelector:
            matchLabels:
              app: rabbitmq-business-config
    - from:
        - podSelector:
            matchLabels:
              app: mongodb-business-config
      ports:
        - port: 8080
